  * 2) If a parent folder is added (for example /home/snoogie/) but some childs (for example /home/snoogie/git/, /home/snoogie/git2 or /home/snoogie/git/src) are already in the folder list, then scleaner will remove them from folders list.
  * Add CRC32 calc method in CEngine.
  * Add accelerators
  * scleaner now use git (bye bye subversion).
  * Moving all non GUI code from maininterface to engine.
  * Adding namespace to source code.
  * Adding menu icons.
  * New set of icons.

 -- Jean-Michel Frouin <jmfrouin@gnu.org>  Fri, 30 Sep 2007 23:44:26 +0200

scleaner (0.31.0) unstable; urgency=low

  * Output plugin tbz is ready.
  * First alpha release.
  * Code cleanup.
  * French version.

 -- Jean-Michel Frouin <jmfrouin@gnu.org>  Fri, 14 Sep 2007 22:19:26 +0200

scleaner (0.30.5) unstable; urgency=low

  * 2 input plugins & 1 output plugin are now delivered with scleaner.

 -- Jean-Michel Frouin <jmfrouin@gnu.org>  Fri, 14 Sep 2007 22:19:26 +0200

scleaner (0.30.4) unstable; urgency=low

  * Plugins are now compiled as separated debian package.

 -- Jean-Michel Frouin <jmfrouin@gnu.org>  Sat, 11 Sep 2007 18:25:26 +0200

scleaner (0.30.3) unstable; urgency=low

  * Binary now in /usr/bin.
  * html & splash screen in /usr/share/scleaner.
  * Build plugins as separated package.

 -- Jean-Michel Frouin <jmfrouin@gnu.org>  Sat, 10 Sep 2007 22:30:03 +0200

scleaner (0.30.2) unstable; urgency=low

  * Correct plugins & html paths.

 -- Jean-Michel Frouin <jmfrouin@gnu.org>  Sat,  8 Sep 2007 22:53:23 +0200

scleaner (0.30.1) unstable; urgency=low

  * Correct a bug in dependencies. Since all wxWidgets libraries on Ubuntu are built in Unicode mode, some changes are need in source code.

 -- Jean-Michel Frouin <jmfrouin@gnu.org>  Sat,  8 Sep 2007 20:44:03 +0200

scleaner (0.30.0) unstable; urgency=low

  * Initial release

 -- Jean-Michel Frouin <jmfrouin@gnu.org>  Sat,  8 Sep 2007 19:32:45 +0200
