@@ -1,6 +1,0 @@
-SET(nullfolders_src nullfolders.cpp)
-ADD_LIBRARY(nullfolders SHARED ${nullfolders_src}) 
-TARGET_LINK_LIBRARIES(nullfolders plugins tools)
-INSTALL(TARGETS nullfolders DESTINATION ${PLUGSDIR}/ PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
-INSTALL(FILES ${CMAKE_SOURCE_DIR}/plugins/in/nullfolders/nullfolders.html DESTINATION ${SHAREDIR}/ PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
-INSTALL(FILES ${CMAKE_SOURCE_DIR}/plugins/in/nullfolders/nullfolders_fr.html DESTINATION ${SHAREDIR}/ PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
